--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: default
 
 
 <article class="post">
-  <h1 style="text-align: left">{{ page.title }}</h1>
+  <h1 style="text-align: center">{{ page.title }}</h1>
   <div class="date">
     {{ page.date | date: "%B %e, %Y" }}
   </div>
