--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -3,8 +3,8 @@
   background-color: rgba(231,225,224,0.5);
   padding: 5px 5px 5px 10px;
   border: 1px solid #ddd;
-  -moz-box-shadow: 2px 2px rgba(0,0,0,0.05);
-  -webkit-box-shadow: 2px 2px rgba(0,0,0,0.05);
+  //-moz-box-shadow: 2px 2px rgba(0,0,0,0.05);
+  //-webkit-box-shadow: 2px 2px rgba(0,0,0,0.05);
   box-shadow: 2px 2px rgba(0,0,0,0.05);
   margin: 20px 0 20px 0;
   overflow: scroll;
