--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -6,7 +6,7 @@
   //-moz-box-shadow: 2px 2px rgba(0,0,0,0.05);
   //-webkit-box-shadow: 2px 2px rgba(0,0,0,0.05);
   box-shadow: 2px 2px rgba(0,0,0,0.05);
-  margin: 20px 0 20px 0;
+  //margin: 20px 0 20px 0;
   overflow: scroll;
 }
 
