--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,19 +1,22 @@
 
 .highlight {
-  background-color: rgba(231,225,224,0.5);
-  padding: 5px 5px 5px 10px;
-  border: 1px solid #ddd;
-  //-moz-box-shadow: 2px 2px rgba(0,0,0,0.05);
-  //-webkit-box-shadow: 2px 2px rgba(0,0,0,0.05);
-  //box-shadow: 2px 2px rgba(0,0,0,0.05);
+
+  //padding: 5px 5px 5px 10px;
+  //background-color: rgba(231,225,224,0.5);
+  //background-clip: content-box;
+  border: 0px solid #ddd;
+  -moz-box-shadow: 2px 2px rgba(0,0,0,0.05);
+  -webkit-box-shadow: 2px 2px rgba(0,0,0,0.05);
+  box-shadow: 2px 2px rgba(0,0,0,0.05);
   margin: 20px 0 20px 0;
-  overflow: scroll;
+  //overflow: scroll;
 }
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
-//.highlight  { background: #F16353; }
+
+.highlight  { background: rgba(231,225,224,0.5); }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
@@ -73,4 +76,3 @@ code {
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
-
