Update bg color

--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -1,6 +1,6 @@
 blockquote{
   display:block;
-  background: #fff;
+  background: #F7E1E0;
   padding: 15px 20px 15px 45px;
   margin: 0 0 20px;
   position: relative;
